@@ -57,6 +57,7 @@ Little functionality wishlist:
 	Should have GPL headers in all files to qualify for debian packaging
 
 UI wishlist:
+	Sorting of tags
 	Save in Preferences the sorting of the list view.
 	Should be able to select multiple tags for ANDing instead of ORing document selection
 	Drag and drop to make LaTeX citations
